--- a/library.properties
+++ b/library.properties
@@ -2,7 +2,7 @@ name=ZumoShield
 version=2.0.0
 author=Pololu
 maintainer=Pololu <inbox@pololu.com>
-sentence=
+sentence=Arduino library for the Pololu Zumo Shield and Zumo robot kit for Arduino.
 paragraph=
 category=Device Control
 url=https://github.com/pololu/zumo-shield-arduino-library
