improve library.properties sentence and paragraph

--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=ZumoShield
 version=2.0.0
 author=Pololu
 maintainer=Pololu <inbox@pololu.com>
-sentence=Arduino library for the Pololu Zumo Shield and Zumo robot kit for Arduino.
-paragraph=
+sentence=Arduino library for the Pololu Zumo Shield and Zumo robot kit for Arduino
+paragraph=This is a library for an Arduino-compatible controller that interfaces with the Pololu Zumo Shield to make a programmable tank chassis robot.
 category=Device Control
 url=https://github.com/pololu/zumo-shield-arduino-library
 architectures=avr
