add script to update component libraries/keywords and update

--- a/library.properties
+++ b/library.properties
@@ -6,4 +6,5 @@ sentence=Arduino library for the Pololu Zumo Shield and Zumo robot kit for Ardui
 paragraph=This is a library for an Arduino-compatible controller that interfaces with the Pololu Zumo Shield to make a programmable tank chassis robot.
 category=Device Control
 url=https://github.com/pololu/zumo-shield-arduino-library
+includes=ZumoShield.h
 architectures=avr
